[tool.poetry]
name = "human-in-the-loop-memory"
version = "0.1.0"
description = ""
authors = ["jmbcmuphd <163065508+jmbcmuphd@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
langgraph = "^0.2.4"
langchain-community = "^0.2.12"
python-dotenv = "^1.0.1"
black = "^24.8.0"
isort = "^5.13.2"
langgraph-checkpoint-sqlite = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
