[tool.poetry]
name = "langgraph-react"
version = "0.1.0"
description = ""
authors = ["Jonathan M Becker, PhD <beckerjonphd@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
langchain = "^0.2.14"
langgraph = "^0.2.4"
langchain-openai = "^0.1.22"
langchainhub = "^0.1.21"
black = "^24.8.0"
isort = "^5.13.2"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
