[tool.poetry]
name = "reflexion-agent"
version = "0.1.0"
description = ""
authors = ["Jonathan Becker PhD <beckerjonphd@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
python-dotenv = "^1.0.1"
black = "^24.8.0"
isort = "^5.13.2"
langchain = "^0.2.14"
langchain-openai = "^0.1.22"
langgraph = "^0.2.4"
langchain-community = "^0.2.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
